--- a/teia/src/app/container/container.component.html
+++ b/teia/src/app/container/container.component.html
@@ -1,3 +1,5 @@
 <div class="card-container">
-  <app-card />
+  <div *ngFor="let album of content">
+    <app-card [album]="album" />
+  </div>
 </div>
